--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "path": "^0.12.7",
+    "router": "^2.2.0"
   }
 }
